# multilingual-voice-chatbot-using-sarvamai

./: .gitignore  README.md  pyproject.toml
chat_with_sarvam/: sarvam_chat.py  sarvam_chat_with_dynamic_voice.py  sarvam_chat_with_summary.py  sarvam_chat_with_voice.py
